Set up Firebase Deploy

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 center{
 	margin-top: 40vh;
 	h1{
-		display: none;
+		//display: none;
 		font-size: 10em;
 		font-weight: 600;
 		text-shadow: 4px 4px 10px #0004;
