--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,53 @@
 * {
   font-family: Arial, Helvetica;
+  padding: 0px;
 }
 
 body {
   background-color: rgb(24, 24, 24);
+  color: white;
+  text-align: center;
 }
 
+
 #AzoicTitle {
-  margin-top: 40vh;
-  font-size: 10em;
+  padding-top: 25vh;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  font-size: 200px;
   font-weight: 600;
   color: rgb(251, 251, 251);
   text-shadow: 4px 4px 10px rgba(255, 255, 255, 0.349);
   text-align: center;
+  vertical-align: center;
 }
+
+.cardcontainer{
+  display: -webkit-inline-box;
+}
+
+.Avatar{
+  width: 25vh;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  width: 25vh;
+  align-items: center;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+
 
 nav.primary-navigation {
   margin: 0 auto;
   display: block;
-  padding: 10px 0 0 0;
   text-align: center;
   font-size: 32px;
 }
@@ -31,7 +60,6 @@ nav.primary-navigation ul li {
   position: relative;
   text-decoration: none;
   text-align: center;
-  font-family: arvo;
 }
 
 nav.primary-navigation li a {
@@ -42,22 +70,10 @@ nav.primary-navigation li a:hover {
   color: #45e026;
 }
 
-nav.primary-navigation ul li ul li {
-  clear: both;
-  width: 100%;
-  text-align: left;
-  margin-bottom: 20px;
-  border-style: none;
-}
-
 a {
   text-decoration: none;
 }
 
 a:hover {
   color: #45e026;
-}
-
-ul li ul li a {
-  transition: all 0.5s ease;
 }
