--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,20 @@ body {
   text-align: center;
 }
 
+#AboutUsTitle{
+  padding-top: 1vh;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  font-size: 200px;
+  font-weight: 600;
+  color: rgb(251, 251, 251);
+  text-shadow: 4px 4px 10px rgba(255, 255, 255, 0.349);
+  text-align: center;
+  vertical-align: center;
+}
 
 #AzoicTitle {
-  padding-top: 25vh;
+  padding-top: 20vh;
   padding-bottom: 0px;
   margin-bottom: 0px;
   font-size: 200px;
@@ -32,7 +43,6 @@ body {
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  width: 25vh;
   align-items: center;
 }
 
@@ -42,14 +52,24 @@ body {
 
 .container {
   padding: 2px 16px;
+  color: rgb(255, 255, 255);
 }
 
+.LinkedIn {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  background-color: teal;
+  display: grid;
+  font-size: 32px;
+  vertical-align: bottom;
+}
 
 nav.primary-navigation {
   margin: 0 auto;
   display: block;
   text-align: center;
   font-size: 32px;
+  padding-top: 0.5vh;
 }
 
 nav.primary-navigation ul li {
@@ -66,14 +86,6 @@ nav.primary-navigation li a {
   color: rgb(255, 255, 255);
 }
 
-nav.primary-navigation li a:hover {
-  color: #45e026;
-}
-
 a {
   text-decoration: none;
-}
-
-a:hover {
-  color: #45e026;
 }
