--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,37 @@
 * {
   font-family: Arial, Helvetica;
   padding: 0px;
+  margin:0;
+}
+
+article {
+  background: linear-gradient(
+    to right, 
+    hsl(98 100% 62%), 
+    hsl(204 100% 59%)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
 }
 
 body {
-  background-color: rgb(24, 24, 24);
-  color: white;
+  background: hsl(204 100% 5%);
   text-align: center;
+  font-family: system-ui;
+  color: white;
 }
 
 #AboutUsTitle{
-  padding-top: 1vh;
-  padding-bottom: 0px;
-  margin-bottom: 0px;
+  margin: 0px;;
   font-size: 125px;
   font-weight: 600;
   color: rgb(251, 251, 251);
-  text-shadow: 4px 4px 10px rgba(255, 255, 255, 0.349);
   text-align: center;
   vertical-align: center;
 }
+
+
 
 #AzoicTitle {
   padding-top: 20vh;
@@ -28,7 +40,6 @@ body {
   font-size: 200px;
   font-weight: 600;
   color: rgb(251, 251, 251);
-  text-shadow: 4px 4px 10px rgba(255, 255, 255, 0.349);
   text-align: center;
   vertical-align: center;
 }
@@ -74,29 +85,7 @@ body {
   background-color: rgb(0, 82, 82);
 }
 
-nav.primary-navigation {
-  margin: 0 auto;
-  display: block;
-  text-align: center;
-  font-size: 32px;
-  padding-top: 0.5vh;
-}
-
-nav.primary-navigation ul li {
-  list-style: none;
-  margin: 0 auto;
-  display: inline-block;
-  padding: 0 20px;
-  position: relative;
-  text-decoration: none;
-  text-align: center;
-}
-
 a {
   text-decoration: none;
   color: rgb(255, 255, 255);
-}
-
-a:hover{
-  color: teal;
 }
