--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,6 @@ body {
   vertical-align: center;
 }
 
-
-
 #AzoicTitle {
   padding-top: 20vh;
   padding-bottom: 0px;
@@ -54,35 +52,40 @@ body {
   padding-bottom: 1vw;
 }
 
+.bar{
+  font-size: 20px;
+  padding-bottom: 1%;
+}
+
+.staffName{
+  font-size: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-weight: 600;
+}
+
+.staffRole{
+  font-size: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 .Avatar{
   width: 25vh;
 }
 
 .card {
+  background: RGB(13, 60, 70);;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 2%;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.288);
 }
 
 .container {
   color: rgb(255, 255, 255);
-}
-
-.LinkedIn {
-  text-decoration: none;
-  color: rgb(255, 255, 255);
-  background-color: teal;
-  font-size: 24px;
-  vertical-align: bottom;
-  margin-bottom: 0px;
-  padding-bottom: 10px;
-  padding-top: 10px;
-}
-
-.LinkedIn:hover {
-  background-color: rgb(0, 82, 82);
 }
 
 a {
