--- a/src/index.css
+++ b/src/index.css
@@ -32,14 +32,10 @@ body {
 }
 
 #AzoicTitle {
-  padding-top: 20vh;
-  padding-bottom: 0px;
-  margin-bottom: 0px;
-  font-size: 200px;
-  font-weight: 600;
+  margin-top: 8vh;
   color: rgb(251, 251, 251);
-  text-align: center;
-  vertical-align: center;
+  height: 50rem;
+  width: 50rem;
 }
 
 .cardcontainer{
