--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body {
 
 .bar{
   font-size: 20px;
-  padding-bottom: 1%;
+  padding-bottom: 1vw;
 }
 
 .staffName{
@@ -62,8 +62,7 @@ body {
 
 .staffRole{
   font-size: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 }
 
 .Avatar{
@@ -74,6 +73,7 @@ body {
   background: RGB(13, 60, 70);;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   border-radius: 2%;
+  padding-bottom: 2vh;
 }
 
 .card:hover {
